--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
          crossorigin="anonymous"
       />
       <!-- Fonts -->
-      <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto" />
+      <link
+         rel="stylesheet"
+         type="text/css"
+         href="https://fonts.googleapis.com/css?family=Roboto"
+      />
       <!-- Css -->
       <link rel="stylesheet" href="/assets/scss/styles.css" />
    </head>
