add href points

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Joke Teller</title>
       <!-- Icons -->
-      <link rel="icon" type="image/png" href="/assets/ico/neva-logo.ico" />
+      <link rel="icon" type="image/png" href="./assets/ico/neva-logo.ico" />
       <!-- Library -->
       <link
          rel="stylesheet"
@@ -20,7 +20,7 @@
          href="https://fonts.googleapis.com/css?family=Roboto"
       />
       <!-- Css -->
-      <link rel="stylesheet" href="/assets/scss/styles.css" />
+      <link rel="stylesheet" href="./assets/scss/styles.css" />
    </head>
    <body>
       <!-- Header -->
@@ -35,11 +35,11 @@
       <!-- Footer -->
       <footer id="footer" class="footer"></footer>
       <!-- Scripts -->
-      <script type="text/javascript" src="/assets/js/utilities/DOMHelper.js" defer></script>
-      <script type="text/javascript" src="/assets/js/components/menu.js" defer></script>
-      <script type="text/javascript" src="/assets/js/components/footer.js" defer></script>
-      <script type="text/javascript" src="/assets/js/libraries/tts.js" defer></script>
-      <script type="text/javascript" src="/assets/js/components/jokes.js" defer></script>
-      <script type="text/javascript" src="/assets/js/main.js" defer></script>
+      <script type="text/javascript" src="./assets/js/utilities/DOMHelper.js" defer></script>
+      <script type="text/javascript" src="./assets/js/components/menu.js" defer></script>
+      <script type="text/javascript" src="./assets/js/components/footer.js" defer></script>
+      <script type="text/javascript" src="./assets/js/libraries/tts.js" defer></script>
+      <script type="text/javascript" src="./assets/js/components/jokes.js" defer></script>
+      <script type="text/javascript" src="./assets/js/main.js" defer></script>
    </body>
 </html>
